--- a/tjenestespesifikasjoner/openapi-templates/libraries/jvm-okhttp/api.mustache
+++ b/tjenestespesifikasjoner/openapi-templates/libraries/jvm-okhttp/api.mustache
@@ -105,6 +105,7 @@ import okhttp3.OkHttpClient
             path = "{{path}}"{{#pathParams}}.replace("{"+"{{baseName}}"+"}", "${{{paramName}}}"){{/pathParams}},
             query = localVariableQuery,
             headers = localVariableHeaders,
+            requiresAuthentication = {{#hasAuthMethods}}true{{/hasAuthMethods}}{{^hasAuthMethods}}false{{/hasAuthMethods}},
             body = localVariableBody
         )
     }
